--- a/FYP Project/FYP Project Code V1/notebooks/01_preprocessing.ipynb
+++ b/FYP Project/FYP Project Code V1/notebooks/01_preprocessing.ipynb
@@ -24,8 +24,7 @@
    "id": "313a26a3-ef18-45b9-9f48-6567ecfab255",
    "metadata": {},
    "source": [
-    "\n",
-    "Generate labels.csv from CBIS-DDSM metadata\n",
+    "## Generate labels.csv from CBIS-DDSM metadata\n",
     "\n",
     "This script consolidates and standardizes metadata from the CBIS-DDSM dataset.\n",
     "It merges mass and calcification case files (train and test sets), encodes the\n",
