feat: edit based on comment part 1

--- a/FYP Preliminary Report/main.tex
+++ b/FYP Preliminary Report/main.tex
@@ -42,19 +42,19 @@
 3.2 Project Idea 2: Deep Learning Breast Cancer Detection 
 
 \subsection{Project Background Information}
-Breast cancer remains the most common cancer among women in Singapore~\cite{10}. While national screening programs such as BreastScreen Singapore aim to improve early detection, multiple barriers—such as dense breast tissue, lower participation among certain ethnic groups, and limitations in clinical capacity—still affect screening efficacy. As shown in the Singapore Breast Cancer Cohort (SGBCC) and recent public health literature, under-screening and delayed diagnosis are especially prominent among older women and specific demographic groups. 
+Breast cancer remains the most common cancer among women in Singapore~\cite{10}. While national screening programs such as BreastScreen~\cite{6} Singapore aim to improve early detection, multiple barriers—such as dense breast tissue, lower participation among certain ethnic groups, and limitations in clinical capacity—still affect screening efficacy. As shown in the Singapore Breast Cancer Cohort (SGBCC)~\cite{10} and recent public health literature, under-screening and delayed diagnosis are especially prominent among older women and specific demographic groups. 
 
-This project addresses these challenges by developing a localized, explainable AI system that enhances early detection for high-risk cases. The value lies in improving diagnostic accuracy in dense breast tissue scenarios, increasing clinician trust through explainability, and supporting targeted interventions in under-screened populations.
+This project addresses these challenges by developing a localized, explainable AI system that enhances early detection for high-risk cases. The value lies in improving diagnostic accuracy in dense breast tissue scenarios—leading to earlier and more reliable identification of malignancies that may be missed in traditional readings. Increased clinician trust, enabled by model explainability, supports more confident clinical decisions. Together, these outcomes can translate into timelier interventions, reduced mortality, and better health outcomes for under-screened populations in Singapore.
 
 \subsection{Project Concept}
-This project proposes an explainable deep learning system that classifies histopathology or mammography images to support breast cancer detection. The system is optimized for diagnostic workflows in Singapore, particularly for patients with dense breast tissue or late-stage presentation. Convolutional Neural Networks (CNNs), combined with interpretability tools such as Grad-CAM, will be used to generate heatmaps that highlight model attention areas, allowing clinicians to visually validate predictions.
+This project proposes an explainable deep learning system that classifies histopathology or mammography images to support breast cancer detection. The system is optimized for diagnostic workflows in Singapore, particularly for patients with dense breast tissue or late-stage presentation. Convolutional Neural Networks (CNNs)~\cite{17}, combined with interpretability tools such as Grad-CAM~\cite{5}, will be used to generate heatmaps that highlight model attention areas, allowing clinicians to visually validate predictions.
 
 \subsection{Project Objectives}
 The main objectives of this project are:
 \begin{itemize}
-    \item To design and train a CNN-based model that accurately classifies breast cancer from mammography or histopathology image datasets.
-    \item To evaluate model generalization performance on profiles relevant to Singaporean women, particularly those with dense breast tissue and older age.
-    \item To integrate explainability features such as Grad-CAM that generate visual outputs aligned with known diagnostic markers, thereby increasing clinician trust and interpretability.
+    \item To develop a CNN-based image classification model that achieves at least 85\% accuracy in detecting breast cancer from mammography and histopathology datasets.
+    \item To ensure robust model performance (e.g., sensitivity above 80\%) across image profiles with dense breast tissue and older age groups, reflecting characteristics of Singaporean women.
+    \item To generate interpretable visual explanations using Grad-CAM that consistently highlight diagnostically relevant image regions corresponding to known radiological markers.
 \end{itemize}
 
 \subsection{Deliverables}
@@ -73,15 +73,27 @@ The main objectives of this project are:
 
 This chapter reviews the limitations of traditional breast cancer risk models, the role of deep learning in diagnostic imaging, the importance of explainability, and challenges in generalizing models across diverse populations. Each section provides justification for the design choices and objectives outlined in this project—emphasizing the need for a localized, explainable deep learning system in Singapore's screening context.
 
+\subsection{Learning from Existing Applications}
+
+Two existing AI-based breast cancer prediction systems were critically reviewed to guide the design of this project:
+
+\paragraph{Yala et al. (2019): Deep Learning Risk Model~\cite{1}.}
+Yala and colleagues developed a deep learning model using screening mammograms to improve 5-year breast cancer risk prediction. Their system outperformed traditional risk models by leveraging raw image data and integrating patient risk factors. This project draws from their method of using image-based CNNs for individualized risk scoring and handling imbalanced data distributions—challenges also present in this project’s target dataset. However, unlike their clinical integration, this project adapts the methodology to the Singaporean demographic using public datasets and augmentation.
+
+\paragraph{Geras et al. (2017): Multi-View Deep CNNs~\cite{8}.}
+Geras et al. proposed a high-resolution mammography system using multiple views (cranio-caudal and mediolateral oblique) to improve lesion detection. Their approach demonstrated superior diagnostic performance through spatial context modeling. Inspired by this, the current project implements a dual-view alignment stage during preprocessing to help the CNN capture inter-view correlations and better detect abnormalities in dense tissue cases—a common issue in the Singaporean female population.
+
+Together, these applications provided insights on multi-view input handling, risk modeling from raw images, and architectural design—supporting both the technical robustness and clinical relevance of this project.
+
 \subsection{Limitations of Traditional Risk Models}
 
-Risk prediction models form the foundation of clinical decision-making in early breast cancer detection. Conventional tools, such as the Gail and Tyrer-Cuzick models~\cite{1}, have been widely adopted in clinical settings for population-level risk stratification. These models use structured demographic and clinical inputs to estimate cancer risk but are limited by their rule-based design and assumptions of feature independence.
+Risk prediction models~\cite{1} form the foundation of clinical decision-making in early breast cancer detection. Conventional tools, such as the Gail and Tyrer-Cuzick models~\cite{1}, have been widely adopted in clinical settings for population-level risk stratification. These models use structured demographic and clinical inputs to estimate cancer risk but are limited by their rule-based design and assumptions of feature independence.
 
 For this project, understanding the limitations of these traditional models is crucial—they underscore the need for more individualized and image-informed approaches. These models are unable to capture spatial or visual features present in medical images, which are essential when diagnosing cancer in women with dense breast tissue.
 
 A key study~\cite{1} compared the Tyrer-Cuzick model with CNN-based deep learning models trained directly on mammograms. The deep learning models significantly outperformed the clinical models, with AUC values ranging from 0.68 to 0.70 compared to 0.62. These results were especially compelling for dense breast tissue subgroups—directly aligning with this project’s target population of Singaporean women, who often present with dense tissue at younger ages~\cite{6}.
 
-Appendix Figure~\ref{fig:lit1table2} further illustrates these findings. It shows that the deep learning model identified over 31.2\% of future cancers within the highest-risk decile—almost double the detection rate of the Tyrer-Cuzick model, which captured only 18.2\%. This performance gap highlights not just improved sensitivity, but also the model’s utility in stratifying high-risk cases early—an essential capability for any national screening program.
+Appendix Figure~\ref{fig:lit1table2} ~\cite{1} further illustrates these findings. It shows that the deep learning model identified over 31.2\% of future cancers within the highest-risk decile—almost double the detection rate of the Tyrer-Cuzick model, which captured only 18.2\%. This performance gap highlights not just improved sensitivity, but also the model’s utility in stratifying high-risk cases early—an essential capability for any national screening program.
 
 Beyond performance metrics, traditional models are inherently limited in adaptability and interpretability. They cannot be fine-tuned for local demographics or provide spatial reasoning about predictions. For instance, local analysis~\cite{6} found that the Tyrer-Cuzick model underestimates risk in Singaporean women, leading to reduced screening recall rates and delayed diagnoses. This directly supports this project’s motivation to build a CNN-based pipeline that can be trained and evaluated using regional risk profiles.
 
@@ -91,17 +103,15 @@ In summary, the weaknesses of traditional models in both predictive power and ad
 
 \subsection{Role of Deep Learning in Breast Cancer Imaging}
 
-To justify the deep learning approach used in this project, it is essential to examine how convolutional neural networks (CNNs) have enhanced breast cancer diagnostics. Unlike traditional models that rely on structured variables such as age and family history, CNNs operate directly on full-field mammograms. This allows them to detect complex spatial features—such as tissue asymmetry, mass shape, and density patterns—that often precede clinical symptoms. Such characteristics are especially critical in screening contexts involving dense breast tissue, a trait common among women in Singapore~\cite{6}.
+To justify the deep learning approach used in this project, it is essential to examine how convolutional neural networks (CNNs) have enhanced breast cancer diagnostics. Unlike traditional models that rely on structured variables such as age and family history, CNNs operate directly on full-field mammograms. This enables them to detect complex spatial features—such as tissue asymmetry, mass shape, and density patterns—that often precede clinical symptoms. These characteristics are particularly critical in screening contexts involving dense breast tissue, a trait common among women in Singapore~\cite{6}.
 
-Evidence from Yala et al.~\cite{1} provides a compelling foundation for this project’s approach. Their study compared three models: the Tyrer-Cuzick clinical risk model, a CNN-based image-only model, and a hybrid model combining clinical and image data. In all cases, the deep learning models outperformed the traditional baseline, particularly in high-density subgroups. Appendix Figure~\ref{fig:hybrid_density} illustrates how hybrid DL models captured significantly more cancers in high-risk, dense-tissue populations—underscoring CNNs’ ability to capture nuanced malignancy signals that traditional methods miss.
+Evidence from Yala et al.~\cite{1} offers strong justification for the adoption of CNN-based image analysis as the foundation of this project. In their study, three models were compared: the Tyrer-Cuzick clinical risk model, a CNN-based image-only model, and a hybrid model combining clinical and imaging features. Both deep learning models outperformed the traditional approach, with the hybrid model achieving the highest detection rates—especially among patients with dense breast tissue. Appendix Figure~\ref{fig:hybrid_density} demonstrates that these CNN-driven models captured significantly more cancers in high-risk, dense-tissue populations. This highlights the advantage of CNNs in extracting detailed visual patterns and supports their role as the core architecture for this project’s predictive pipeline.
 
-Appendix Figure~\ref{fig:lit1roc} further strengthens this argument by visualizing ROC curves across the three models. The CNN-based models demonstrated superior true-positive rates at nearly every threshold. For this project, these findings justify the selection of a CNN backbone (e.g., ResNet or EfficientNet) for risk prediction. They also support the hybrid design direction, where image features can be supplemented with clinical data for marginal gains.
+Moreover, the hybrid model in Yala et al.~\cite{1}—which combines image features with clinical metadata—demonstrated marginal performance improvements over the image-only CNN. For this project, this suggests that integrating additional patient-specific factors (e.g., breast density or age) into the pipeline could enhance model calibration for local populations. This aligns with the desired outcome of increasing detection performance specifically in Singaporean women, where dense tissue and age-related diagnostic delays are prevalent~\cite{6,10}.
 
-Beyond statistical performance, deep learning models offer clinical interpretability when paired with tools like Grad-CAM. This is exemplified in Shen et al.~\cite{7}, where CNNs produced heatmaps overlayed on mammograms to highlight regions of diagnostic interest. Appendix Figure~\ref{fig:shen2019} shows how the model accurately localized high-risk regions while minimizing false positives. This interpretability aligns directly with the project’s goal of supporting radiologist decision-making—not replacing it—by providing transparent visual justifications for model outputs.
+Shen et al.~\cite{7} further reinforce this direction by showcasing the use of CNNs in generating Grad-CAM-based heatmaps that highlight diagnostically salient regions within mammograms. These visualizations not only aid radiologists in understanding the rationale behind predictions but also reduce overreliance on black-box outputs. As illustrated in their study, Grad-CAM helped improve trust in AI-assisted diagnostics by revealing consistent and clinically relevant attention areas. This motivates the project's focus on incorporating visual explainability as an interpretability layer over CNN predictions, ultimately supporting clinician adoption.
 
-From a local systems perspective, these capabilities are highly relevant to Singapore’s healthcare landscape. DL models offer scalable, automated triage solutions for national screening programs that face resource constraints. By fine-tuning these models on localized data or using targeted augmentation strategies, this project aims to build a system that is both technically robust and demographically sensitive.
-
-In summary, deep learning offers a powerful and adaptable foundation for early breast cancer detection. The literature reviewed here justifies the core technical choices of this project: adopting CNN-based models, integrating explainability, and designing for dense tissue scenarios within the Singaporean context.
+Taken together, these works justify the technical foundations of this project: selecting CNN-based models for their spatial learning capacity, exploring hybrid architectures for incremental performance gain, and embedding explainability to facilitate clinical acceptance in the Singaporean screening context~\cite{1,6,7}.
 
 \subsection{Explainability in Medical AI}
 
